2010-09-24  Vadim Kurland  <vadim@vk.crocodile.org>

	* configlets/linux24/check_utilities: fixed #1714 "make checking
	for MODPROBE conditional". There is no need to check if modprobe
	utility exists on the firewall machine if it is not used by the
	script.

2010-09-22  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog_ui_ops.cpp (instDialog::readInstallerOptionsFromFirewallObject): 
	fixed #1724 . There was a problem with pscp.exe and putty
	sessions. Plink.exe accepts session name in place of the host name
	on the command line, but pscp.exe does not. We ask user to enter
	session name in the "alternative name or address to use to
	communicate with the firewall" input field in the "Installer" tab
	of the firewall settings dialog and then use it in place of the
	host name in the command line for pscp.exe and plink.exe. This
	works with plink.exe but breaks pscp.exe which interprets it as a
	host name and fails with an error ""ssh_init: Host does not
	exist". The fix checks if what user entered in the "alternative
	host or address field" is a session name and uses different
	command line with pscp.exe

2010-09-20  Vadim Kurland  <vadim@vk.crocodile.org>

	* NATCompiler_ipt.cpp (compile): fixed SF bug #3071667
	"Compilation segfault with DNS address in NAT rule". Added rule
	processors to replace Run-time DNSName and Address Table objects
	in TSrc and TDst.

2010-09-16  Vadim Kurland  <vadim@vk.crocodile.org>

	* SSHSession.cpp: Refs #1699 installation session status was reset
	from "failure" to "success" in a configuration where fwbuilder gui
	was running on Windows and talked to Cisco router using pscp.exe
	and plink.exe and ssh session failed because of authentication
	failure. This happened because plink.exe terminated with return
	status "success" even in case of authentication failure.

	* generatedScriptTestsIpfilter.cpp (GeneratedScriptTest::runCompiler):
	unit tests to test manifest and activation commands in the generated